
from utils.meta import MetaAbstractClass
from utils.logger import MyLogger
from utils.utils_py import stringfy, remove_keys, inter_dict_keys
from utils.yaml_file import get_yaml_content

from .AbstractRunner import AbstractRunner
from .VoidRunner import VoidRunner
from .RunnerFactory import RunnerFactory

from pathlib import Path


class RunnerManager(MetaAbstractClass):

    def __init__(self, input_files: list[Path], run_step_names: list[str]):
        self.input_files: list[Path] = input_files
        self.steps: list[AbstractRunner | None] = []
        self.steps_derived: list[AbstractRunner | None] = []
        self.tr_steps: list[str] = run_step_names
        self.generic_params: dict = dict()  # At YAW level

    # ============================PARSE=========================================
    def parse_files(self) -> None:
        """Parse all the input recipies"""
        [self.__parse_file(f) for f in self.input_files]

    def __parse_file(self, input_file) -> None:
        """Parse a recepie file from input_file."""
        print(f"Parsing {input_file}...")
        _ = RunnerFactory.parse(input_file)
        with open(input_file, "r") as yaml_file:
            # 1. Get generic parameters for all the recipies on the file:
            all_recipies_content = get_yaml_content(yaml_file)
            generic = inter_dict_keys(all_recipies_content, self.__params())
            self._log("Generic parameters found:", generic)
            # 2. Remove the generic parameters to don't parse them:
            content = remove_keys(all_recipies_content, self.__params())
            for r_name, r_params in content.items():
                print(f"Parsing {r_name} recipie")
                try:
                    r_params.update(generic)
                    r_params["recipie_name"] = r_name
                    step_type = r_params["type"]
                    self.steps.append(self.runners[step_type](**r_params))
                except Exception as e:
                    if isinstance(e, KeyError):
                        self._err(f"Runner {step_type} not found! {str(e)}")    
                    else:
                        self._err(f"Excluding step {r_name} from {r_name}")
                    self.steps.append(VoidRunner(r_name, str(e)))
        if len(self.steps) == 0:
            raise Exception("No steps found to derive recipies")

    # ============================DERIVE========================================
    def derive_recipies(self):
        if len(self.steps) == 0:
            self._warn("No steps found to derive recipies")
            return
        for recipie in self.steps:
            # TODO: This can raise an exception...
            self.steps_derived.extend(recipie.derive_recipies())

    # =============================RUN==========================================
    def run_steps(self):
        if self.tr_steps:
            print("Only executing steps with name", stringfy(self.tr_steps))

        for i, step in enumerate(self.steps_derived):
            name = step.get_recipie_name()
            if self.tr_steps and not any(n in name for n in self.tr_steps):
                self._info(f"Recipie {i} - {name} skipped due cmd line")
                step.set_result(0, "skipped due cmd line --steps")
                continue
            try:
                print(f"Checking parameters @ step {i} ({name})")
                step.check_parameters()
            except Exception as e:
                self._err(f"{name}->", str(e))
                step.set_result(-1, "Error checking recipie!")
                # self._log(traceback.format_exc())
                continue
            try:
                print(f"Managing parameters @ step {i} ({name})")
                step.manage_parameters()
                self._ok("MANAGEMENT DONE")
            except Exception as e:
                self._err(f"{name}->", str(e))
                step.set_result(-1, "Error checking recipie!")
                # self._log(traceback.format_exc())
                continue
            try:
                print(f"Executing @ step {i} ({name})")
                step.run()
                self._ok("EXECUTION DONE")
            except Exception as e:
                self._err(f"While executing recipe {i} ->", str(e))
                step.set_result(-1, f"{str(e)}")
            print("-" * 87)

    # =========================PRINT============================================
    def print_results(self):
        for i, step in enumerate(self.steps_derived):
            if step is None:
                print(f"Step {i}: Undefined")
            else:
                print(f"Step {i}: {step.get_result()}")
