@startuml
' Paquetes y clases principales de yaw/core

abstract class AbstractRunner {
  - type: str
  - mode: str = "zip"
  - track_env: str = "env.log"
  - create_dir: bool
  - overwrite: bool
  - dry: bool
  - mirror: int
  - recipie_name: str
  - log_name: Optional[str]
  - env_file: Optional[str]
  - rundir: Optional[Path | str]
  --
  + check_parameters()
  + manage_parameters()
  + run() <<abstract>>
  + check_dry(): bool
  + set_result(int, str)
  + get_result(): str
  + get_parameters(): list
}

class AbstractFilesRunner {
  - ref_rundir: set[str]
  - rundir_files: set[str]
  - tar_gz_files: set[str]
  - git_repo: Optional[str]
  - git_branch: Optional[str]
  - sym_link_big: bool
  --
  + check_parameters()
  + manage_parameters()
  - git_clone_str(): str
  - git_branch_str(): str
}

abstract class AbstractSlurmRunner {
  + get_tmp_params()
  + run() <<abstract>>
  - _get_slurm_directives()
}

class BashRunner {
  + get_tmp_params()
  + manage_parameters()
  + run()
  - _get_env_str(): str
  - _get_env_trk_str(): str
  - _get_cmd_str(): str
}

class BashSlurmRunner {
  + get_tmp_params()
  + check_parameters()
  + manage_parameters()
  + run()
  - __is_slurm(): bool
  - __is_bash(): bool
}

class VoidRunner {
  + __init__(run_name, error_msg)
  + check_parameters()
  + manage_parameters()
  + run()
}

class RunnerFactory {
  - _RUNNER_REGISTRY: dict
  + register_runner(cls)
  + derive(runner): list
  + generate(runner_name)
  + get_runners()
  + all_params()
}

class RunnerManager {
  - input_files: list[Path]
  - steps: list[AbstractRunner]
  - steps_derived: list[AbstractRunner]
  - tr_steps: list[str]
  - generic_params: dict
  + parse_files()
  + derive_recipies()
  + run_steps()
  + print_results()
}

' Relaciones / Herencias
AbstractFilesRunner --|> AbstractRunner
AbstractSlurmRunner --|> AbstractRunner
BashRunner --|> AbstractFilesRunner
BashSlurmRunner --|> BashRunner
BashSlurmRunner --|> AbstractSlurmRunner
VoidRunner --|> AbstractRunner

RunnerManager "1" *-- "*" AbstractRunner : steps
RunnerFactory ..> AbstractRunner : registry

' Referencia a clase que falta (refactor)
BashRunner2 -[#grey]-> AbstractFileRunner2 : <<refactor pending>>

@enduml
